fixed blog layout + updated theme block spacings

--- a/less/theme.less
+++ b/less/theme.less
@@ -51,7 +51,7 @@ html { overflow-y: scroll; }
 /* Blocks
  ========================================================================== */
 
-.tm-navbar + .tm-main { padding-top: 0; }
+.tm-navbar + .uk-block-default { padding-top: 0; }
 
 /*
  * Footer
